--- a/WebDev/Basics/style.css
+++ b/WebDev/Basics/style.css
@@ -2,9 +2,17 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "gilroy";
 }
 
 html , body{
     height: 100%;
     width: 100%;
+    /* padding: 1rem 2rem; */
+}
+
+nav{
+    width: 100%;
+    padding: 1rem 1rem;
+    background-color: rgba(213, 36, 213, 0.2);
 }
