--- a/WebDev/Basics/style.css
+++ b/WebDev/Basics/style.css
@@ -11,8 +11,35 @@ html , body{
     /* padding: 1rem 2rem; */
 }
 
-nav{
+/* nav{
     width: 100%;
     padding: 1rem 1rem;
     background-color: rgba(213, 36, 213, 0.2);
+} */
+
+.box{
+    width: 25vw;
+    height: 45vh;
+    background-color: lightcoral;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    /* z-index: 9999; */
 }
+
+.box img{
+    width: 100%;
+    height: 100%;
+    object-position: center;
+    object-fit: cover;
+    /* border-radius: 1rem; */
+    /* border: 2px solid ; */
+}
+
+/* .box2{
+    width: 1535px;
+    height: 695px;
+    /* height: 1000px; */
+    /* background-color: lightblue; */
+/* } */ 
