--- a/WebDev/MasteringCSS/style.css
+++ b/WebDev/MasteringCSS/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 html , body{
     height: 100%;
@@ -16,7 +16,9 @@ html , body{
     display: flex;
     align-items: center;
     justify-content: center;
+    /* gap: 3vw; */
     gap: 3vw;
+    padding: 1vw;
     /* justify-content: space-between; */
     /* background-color: lightcoral; */
 }
@@ -35,7 +37,8 @@ html , body{
 .box .con2{
     /* height: calc(100vh - 80vh); */
     height: 80vh;
-    width: 25vw;
+    /* width: 25vw; */
+    width: calc(100vw - 60vw);
     /* background-color: red; */
     border-radius: 50vw;
     /* position: relative; */
@@ -76,7 +79,7 @@ html , body{
 }
 
 .box .con2 .subcon2 .imagecon{
-    width: 85%;
+    width: 70%;
     height: 40%;
 }
 
