--- a/WebDev/MasteringCSS/Grid/smallproj/style.css
+++ b/WebDev/MasteringCSS/Grid/smallproj/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: gilroy;
 }
 html , body{
     height: 100%;
@@ -31,36 +32,122 @@ main{
     background-color: #ededed;
     display: grid;
     grid-template-columns: 25% 25% 50%;
-    grid-template-rows: 25% 50% 25%;
+    grid-template-rows: 30% 55% 15%;
 }
 
 .left-top-left{
-    background-color: red;
+    /* background-color: red; */
     /* grid-row: 1;
     grid-column: 1; */
-
+    padding: 1.5vw;
 }
 
-.left-top-right{
+.left-top-left .square{
+    width: 1.5vw;
+    height: 3vh;
     background-color: black;
+    rotate: 45deg;
+}
+
+
+
+.left-top-right{
+    /* background-color: black; */
     /* grid-column: 1;
     grid-row: 1; */
+    /* background-color: lightblue; */
+    justify-self: right;
+    padding: 1.5vw;
+    text-align: right;
+}
+
+.left-top-right h4{
+    /* background-color: orange; */
+    margin-bottom: 2.5vw;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+
+.left-top-right h5{
+    /* background-color: red; */
+    font-size: 18px;
+    font-weight: 500;
+    color: #333;
+    line-height: 1.5vw;
 }
 
 .left-center{
-    background-color: blue;
+    /* background-color: blue; */
     grid-row: 2;
     grid-column: 1/3;
+    padding: 1vw;
+    /* font-weight: 100; */
+    /* font-family: montserrat; */
 }
 
+.left-center h1{
+    font-size: 6.5vw;
+    text-transform: uppercase;
+    /* font-family: montserrat; */
+    font-family: Helvetica;
+    font-weight: 500;
+    line-height: 6vw;
+}
+
+.left-center h1:nth-child(2n){
+    /* background-color: red; */
+    text-align: center;
+}
+
+
 .left-bottom{
-    background-color: greenyellow;
+    /* background-color: greenyellow; */
     grid-row: 3;
     grid-column: 1/3;
+    padding: 1.3vw;
+}
+
+.left-bottom p{
+   width: 63.5%; 
 }
 
 .right{
-    background-color: purple;
+    /* background-color: purple; */
     grid-column: 3;
     grid-row: 1/4;
+    padding: 1.5vw 8vw 1vw 1.5vw;
+}
+
+.right video{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    /* object-position: center; */
+    border-radius: 0.4vw;
+}
+
+.arrow{
+    position: absolute;
+    top: 50%;
+    left: 51.5%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: orangered;
+    color: white;
+    padding: 1vw;
+    border-radius: 50vw;
+}
+
+.arrow i{
+    font-size: 2.2vw;
+    font-weight: 100;
+}
+
+
+
+@media (max-width: 600px){
+    
 }
