--- a/WebDev/CSS_Projects/Premier/style.css
+++ b/WebDev/CSS_Projects/Premier/style.css
@@ -315,5 +315,77 @@ html , body{
 #page2{
     width: 100%;
     height: 100%;
-    /* background-color: blue; */
+    background-color: blue;
+    display: flex;
+    align-items: center;
+    /* justify-content: center; */
+    /* gap: 2vw; */
+    justify-content: space-between;
+    padding: 2vw 4.5vw;
 }
+
+#page2-part1{
+    height: 100%;
+    width: 50%;
+    /* width: 40%; */
+    /* background-color: red; */
+    background-image: url(./images/Stylish\ Fashion\ Portrait.png);
+    background-size: cover;
+    background-position: top;
+}
+
+#page2-part2{
+    height: 100%;
+    /* width: 40%; */
+    width: 42.5%;
+    background-color: bisque;
+    /* background-image: url(./images/Stylish\ Portrait\ Shot.png);
+    background-size: cover;
+    background-position: top; */
+    /* display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1vw 1vw 0vw 1vw;
+    gap: 2vw;
+    position: relative; */
+}
+
+#page2-part2 img{
+    height: 65%;
+    width: 100%;
+    object-fit: cover;
+    object-position: top;
+}
+
+/* #innertextp2{ */
+    /* width: 100%; */
+    /* height: calc(100% - 68%); */
+    /* background-color: pink;
+    height: calc(100% - 65%);
+    display: flex;
+    justify-content: center;
+    align-items: bottom;
+    gap: 1vw;
+    padding: 0.1vw;
+    position: relative; */
+    /* padding: 1vw 0vw 0vw 0vw; */
+
+/* } */
+
+/* #innertextp2 h5{
+    width: 35%;
+    height: fit-content;
+    height: 90%;
+    font-size: 1.8vw;
+    font-weight: 450;
+    background-color: lightcyan; */
+    /* padding: 1vw 0vw 0vw 0vw; */
+/* } */
+
+/* #innertextp2 p{
+    background-color: red;
+    width: 60%;
+} */
