--- a/WebDev/CSS_Projects/Premier/style.css
+++ b/WebDev/CSS_Projects/Premier/style.css
@@ -315,7 +315,7 @@ html , body{
 #page2{
     width: 100%;
     height: 100%;
-    background-color: blue;
+    /* background-color: blue; */
     display: flex;
     align-items: center;
     /* justify-content: center; */
@@ -338,7 +338,7 @@ html , body{
     height: 100%;
     /* width: 40%; */
     width: 42.5%;
-    background-color: bisque;
+    /* background-color: bisque; */
     /* background-image: url(./images/Stylish\ Portrait\ Shot.png);
     background-size: cover;
     background-position: top; */
