--- a/WebDev/DOM by Sarthak sensei/MasteringDOM/style.css
+++ b/WebDev/DOM by Sarthak sensei/MasteringDOM/style.css
@@ -12,7 +12,7 @@ html , body{
 #card-content{
     height: 100%;
     height: 50%;
-    background-color: lightblue;
+    background-color: rgba(173, 216, 230, 0.222);
     display: flex;
     align-items: center;
     justify-content: center;
