--- a/WebDev/GSAP/Gsap_Projects/Landpage2/style.css
+++ b/WebDev/GSAP/Gsap_Projects/Landpage2/style.css
@@ -2,33 +2,96 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: #f1d8ac;
+    font-family: "HelveticaNeue", sans-serif;
 }
 html , body{
     height: 100%;
     width: 100%;
+    /* font-family: "HelveticaNeue"; */
 }
 
 main{
     height: 100%;
     width: 100%;
     position: relative;
+    /* padding: 0.1vw; */
 }
 
 #page1{
     height: 100%;
     width: 100%;
     background-color: #151414;
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* align-items: center; */
+    /* align-items: center; */
+    /* justify-content: center; */
+    /* gap: ; */
+    /* padding: 0.1vw; */
+    position: relative;
 }
 
 nav{
     height: 14vh;
     width: 100%;
-    background-color: red;
+    /* background-color: red; */
     display: grid;
-
+    grid-template-columns: 56% 11% 11% 11% 11%;
+    align-content: center;
+    justify-content: center;
+    padding: 1vw;
+    justify-items: center;
+    align-items: center;
+    z-index: 999;
 }
 
 #logo{
-    height: 6vw;
-    width: 6vw;
+    height: 4.2vw;
+    width: 4vw;
+    justify-self: flex-start;
+}
+
+h3{
+    color: #f1d8ac;
+    font-size: 1.3vw;
+    /* font-family: helvetica; */
+    /* font-family: Gilroy; */
+    font-weight: 520;
+    /* background-color: blue; */
+}
+
+
+
+#hero{
+    height: calc(100% - 14vh);
+    width: 100%;
+    padding: 2.5vw;
+    display: grid;
+    align-content: flex-start;
+    justify-content:center;
+    position: relative;
+}
+
+p{
+    font-size: 40vw;
+    /* height: fit-content; */
+    /* font-size: 35vw; */
+    /* font-size: 40vw; */
+    /* height: fit-content; */
+    color: #F3C77C;
+    font-weight: 1000;
+    letter-spacing: -2.5vw;
+    background-color: red;
+    /* /* position: absolute; */
+    top: 0%;
+    /* left: 5%; */
+    display: flex;
+    align-items: flex-start;
+    justify-content: center; 
+    /* justify-self: flex-start; */
+    /* align-items: flex-start;
+    justify-items: flex-start; */
+    /* justify-items: flex-start; */
+    /* align-items: flex-start; */
 }
