--- a/WebDev/GSAP/Gsap_Projects/Landpage2/style.css
+++ b/WebDev/GSAP/Gsap_Projects/Landpage2/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     color: #f1d8ac;
     font-family: "HelveticaNeue", sans-serif;
+    background-color: #151414;
 }
 html , body{
     height: 100%;
@@ -76,7 +77,7 @@ h3{
     flex-shrink: 0;
 }
 
-p{
+#under-hero{
     font-size: 610px;
     /* height: fit-content; */
     /* font-size: 35vw; */
@@ -98,3 +99,28 @@ p{
     /* justify-items: flex-start; */
     /* align-items: flex-start; */
 }
+
+/* #page2{
+    height: 100%;
+    width: 100%;
+    color: #F3C77C;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 999; */
+    /* position: absolute; */
+    /* top: 5%; */
+    /* background-color: #151414; */
+/* } */
+
+/* #page2 p{
+    font-size: 2.7vw;
+    font-weight: 400;
+    color: #F3C77C;
+} */
+
+/* #page3{
+    height: 50%;
+    width: 100%;
+    background-color: #151414;
+} */
