--- a/WebDev/Aggresive Practice HCSS/Letsgo/SmallProj1/style.css
+++ b/WebDev/Aggresive Practice HCSS/Letsgo/SmallProj1/style.css
@@ -7,4 +7,41 @@
 html, body {
   height: 100%;
   width: 100%;
+  background-color: #0E0E0E;
+  color: #DAC5A7;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+main {
+  width: 100%;
+  position: relative;
+}
+
+#Landingpage {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem 4rem;
+  gap: 1rem;
+}
+#Landingpage img {
+  width: 85%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+#Landingpage h1 {
+  font-size: 3.5rem;
+  text-align: center;
+  font-weight: 100;
+  line-height: 4rem;
+}
+#Landingpage p {
+  text-align: center;
+  font-weight: 100;
+  line-height: 1.6;
+  font-size: 1.2rem;
+  margin: 0.6rem 0;
+  opacity: 0.7;
 }/*# sourceMappingURL=style.css.map */
