--- a/WebDev/Aggresive Practice HCSS/Letsgo/SmallProj1/style.scss
+++ b/WebDev/Aggresive Practice HCSS/Letsgo/SmallProj1/style.scss
@@ -7,4 +7,47 @@
 html,body{
     height: 100%;
     width: 100%;
+    background-color: #0E0E0E;
+    color: #DAC5A7;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+main{
+    width: 100%;
+    // height: 100%;
+    position: relative;
+}
+
+#Landingpage{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem 4rem;
+    gap: 1rem;
+
+    img{
+        width: 85%;
+        // width: 100%;
+        object-fit: cover;
+    }
+
+    h1{
+        font-size: 3.5rem;   //4*16= 64 
+        text-align: center;
+        font-weight: 100;
+        line-height: 4rem;
+    }
+
+
+    p{
+        text-align: center;
+        font-weight: 100;
+        line-height: 1.6;
+        font-size: 1.2rem;
+        margin: 0.6rem 0;
+        opacity: 0.7;
+    }
+}
+
